[package]
name = "orml-xtokens"
description = "Cross-chain token transfer."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xtokens"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
sp-io = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
sp-std = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }

frame-support = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }
frame-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12", default-features = false }

cumulus-primitives-core = { git = "https://github.com/purestake/cumulus", branch = "gorka-try-new-reanchor", default-features = false }

xcm = { git = "https://github.com/purestake/polkadot", branch = "gorka-try-new-reanchor", default-features = false }
xcm-executor = { git = "https://github.com/purestake/polkadot", branch = "gorka-try-new-reanchor", default-features = false }

orml-xcm-support = { path = "../xcm-support", default-features = false }
orml-traits = { path = "../traits", default-features = false}

[dev-dependencies]
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }
pallet-balances = { git = "https://github.com/purestake/substrate", branch = "moonbeam-polkadot-v0.9.12" }

# cumulus
cumulus-primitives-core = { git = "https://github.com/purestake/cumulus", branch = "gorka-try-new-reanchor" }
cumulus-pallet-dmp-queue = { git = "https://github.com/purestake/cumulus", branch = "gorka-try-new-reanchor" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/purestake/cumulus", branch = "gorka-try-new-reanchor" }
cumulus-pallet-xcm = { git = "https://github.com/purestake/cumulus", branch = "gorka-try-new-reanchor" }
parachain-info = { git = "https://github.com/purestake/cumulus", branch = "gorka-try-new-reanchor" }

# polkadot
polkadot-parachain = { git = "https://github.com/purestake/polkadot", branch = "gorka-try-new-reanchor" }
xcm = { git = "https://github.com/purestake/polkadot", branch = "gorka-try-new-reanchor" }
xcm-executor = { git = "https://github.com/purestake/polkadot", branch = "gorka-try-new-reanchor" }
xcm-builder = { git = "https://github.com/purestake/polkadot", branch = "gorka-try-new-reanchor" }
pallet-xcm = { git = "https://github.com/purestake/polkadot", branch = "gorka-try-new-reanchor" }
polkadot-runtime-parachains = { git = "https://github.com/purestake/polkadot", branch = "gorka-try-new-reanchor" }
xcm-simulator = { git = "https://github.com/purestake/polkadot", branch = "gorka-try-new-reanchor"}

orml-tokens = { path = "../tokens" }
orml-xcm = { path = "../xcm" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"cumulus-primitives-core/std",
	"xcm/std",
	"xcm-executor/std",
	"orml-xcm-support/std",
	"orml-traits/std",
]
try-runtime = ["frame-support/try-runtime"]
# Needed because of cargo feature pollution.
runtime-benchmarks = [
	"xcm-builder/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
]
